<resources>

    <string name="app_name">Who Am I? - Football edition</string>

    <string name="question_bar_menu">Menu</string>
    <string name="question_bar_clue">Letter Reveal</string>
    <string name="question_bar_clue_left" formatted="false">(%d Left)</string>
    <string name="question_continue">Continue</string>
    <string name="question_skip">Give up!</string>
    <string name="question_bar_points" formatted="false">My Points:%n%s</string>

    <string name="dialog_skip_title">Skip question</string>
    <string name="dialog_skip_msg">Giving up and moving to the next question?</string>
    <string name="dialog_skip_pos">Give up</string>
    <string name="dialog_skip_neg">Not yet!</string>

    <string name="teamhistory_header_years">Years</string>
    <string name="teamhistory_header_team">Team</string>
    <string name="teamhistory_header_apps_goals">Apps (Goals)</string>
    <string name="teamhistory_header_goals">Goals</string>
    <string name="teamhistory_header_apps">Apps</string>

    <string name="dialog_loading_title">Please Wait</string>
    <string name="dialog_loading_msg">Loading</string>

    <string name="toast_daily_bonus" formatted="false">Congratz! You received your daily bonus of %d clues</string>

    <string name="main_start">Play</string>
    <string name="main_settings">Settings</string>

    <string name="options_title">Options</string>
    <string name="options_start_game">Start game</string>
    <string name="question_bar_share">Share</string>
    <string name="share_title">Whomi?</string>
    <string name="whomi">Whomi</string>
    <string name="select_nations">Select Nations</string>
    <string name="content_description">Content Description</string>

</resources>
