<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        style="@style/teamhistory_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/teamhistory_header_years" />

    <TextView
        style="@style/teamhistory_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/teamhistory_header_team" />

    <TextView
        style="@style/teamhistory_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:maxLines="1"
        android:text="@string/teamhistory_header_apps" />

    <TextView
        style="@style/teamhistory_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:maxLines="1"
        android:text="@string/teamhistory_header_goals" />

</LinearLayout>